--- a/dev/scss/styles.scss
+++ b/dev/scss/styles.scss
@@ -23,3 +23,5 @@
 @import "sections/_why-NJ";
 @import "sections/_regions";
 @import "sections/_places-to-visit";
+@import "sections/_places-to-stay";
+@import "sections/_dining-and-shopping";
