--- a/dev/scss/sections/_places-to-visit.scss
+++ b/dev/scss/sections/_places-to-visit.scss
@@ -9,21 +9,21 @@
    } 
 
    #v-img-1{
-    background-image: url("../img/places-to-visit/place1.png");
+    background-image: url("../img/places-to-visit/place1.jpg");
     background-position: center;
     background-size: cover;
     height: 500px;
    }
 
    #v-img-2{
-    background-image: url("../img/places-to-visit/place2.png");
+    background-image: url("../img/places-to-visit/place2.jpg");
     background-position: center;
     background-size: cover;
     height: 500px;
    }
 
    #v-img-3{
-    background-image: url("../img/places-to-visit/place3.png");
+    background-image: url("../img/places-to-visit/place3.jpg");
     background-position: center;
     background-size: cover;
     height: 500px;
