--- a/dev/scss/sections/_regions.scss
+++ b/dev/scss/sections/_regions.scss
@@ -1,10 +1,11 @@
 #regions {
 
     #map-image {
-        background-image: url("../img/regions/map.png");
+        background-image: url("../img/regions/map.jpg");
         background-position: center;
         background-size: cover;
-        height: 500px;
+        height: 355px;
+        
     }
 
 
@@ -104,39 +105,39 @@
 
 
     #region1-image {
-        background-image: url("../img/regions/region1.png");
+        background-image: url("../img/regions/region1.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
     }
 
     #region2-image {
-        background-image: url("../img/regions/region2.png");
+        background-image: url("../img/regions/region2.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
     }
 
     #region3-image {
-        background-image: url("../img/regions/region3.png");
+        background-image: url("../img/regions/region3.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
     }
     #region4-image {
-        background-image: url("../img/regions/region4.png");
+        background-image: url("../img/regions/region4.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
     }
     #region5-image {
-        background-image: url("../img/regions/region5.png");
+        background-image: url("../img/regions/region5.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
     }
     #region6-image {
-        background-image: url("../img/regions/region6.png");
+        background-image: url("../img/regions/region6.jpg");
         background-position: center;
         background-size: cover;
         height: 250px;
@@ -540,7 +541,7 @@
     }
 
     #beach-hero {
-        background-image: url("../img/regions/beach.png");
+        background-image: url("../img/regions/beach.jpg");
         background-position: center;
         background-size: cover;
         height: 500px;
