--- a/dev/scss/sections/_regions.scss
+++ b/dev/scss/sections/_regions.scss
@@ -103,44 +103,48 @@
         
     }
 
+    .region-img-ht {
+        height: 250px;;
+    }
+
 
     #region1-image {
         background-image: url("../img/regions/region1.jpg");
         background-position: center;
         background-size: cover;
-        height: 250px;
+
     }
 
     #region2-image {
         background-image: url("../img/regions/region2.jpg");
         background-position: center;
         background-size: cover;
-        height: 250px;
+
     }
 
     #region3-image {
         background-image: url("../img/regions/region3.jpg");
         background-position: center;
         background-size: cover;
-        height: 250px;
+
     }
     #region4-image {
         background-image: url("../img/regions/region4.jpg");
         background-position: center;
         background-size: cover;
-        height: 250px;
+
     }
     #region5-image {
         background-image: url("../img/regions/region5.jpg");
         background-position: center;
         background-size: cover;
-        height: 250px;
+  
     }
     #region6-image {
         background-image: url("../img/regions/region6.jpg");
         background-position: center;
         background-size: cover;
-        height: 250px;
+
     }
 
 
@@ -544,7 +548,15 @@
         background-image: url("../img/regions/beach.jpg");
         background-position: center;
         background-size: cover;
-        height: 500px;
+        height: 360px;
+
+        @include md{
+            height: 640px;
+        }
+
+        @include lg{
+            height: 730px;
+        }
     }
 
 
