--- a/deploy/css/styles.css
+++ b/deploy/css/styles.css
@@ -391,11 +391,23 @@ ul {
 /* =============
     Why NJ
 ============= */
+@media (min-width: 1200px) {
+  #why-nj {
+    display: grid;
+    grid-template-columns: auto 1200px auto;
+    grid-template-areas: ". content-nj .";
+  }
+}
 #why-nj #new-jersey {
-  display: grid;
+  border: 1px solid red;
   display: grid;
   grid-template-columns: 16px auto 16px;
   grid-template-areas: ". title ." ". photo1 ." ". photo4 ." ". button .";
+}
+@media (min-width: 1200px) {
+  #why-nj #new-jersey {
+    grid-area: content-nj;
+  }
 }
 #why-nj #new-jersey #nj-title {
   grid-area: title;
@@ -416,7 +428,6 @@ ul {
 }
 @media (min-width: 768px) {
   #why-nj #new-jersey {
-    display: grid;
     grid-template-columns: 50% auto;
     grid-template-areas: "title title" "photo1 p1" "photo2 photo3" "p2 photo4";
   }
@@ -444,8 +455,6 @@ ul {
 }
 @media (min-width: 1024px) {
   #why-nj #new-jersey {
-    border: 1px solid red;
-    display: grid;
     grid-template-columns: 10% auto 10% 10% auto 10%;
     grid-template-areas: "title title title title title title" "photo1 photo1 p1 p1 p1 p1" ". photo2 photo2 photo3 photo3 ." "p2 p2 p2 p2 photo4 photo4";
   }
@@ -492,10 +501,12 @@ ul {
   background-position: center;
   background-size: cover;
   height: 228px;
+  display: none;
 }
 @media (min-width: 768px) {
   #why-nj #ig2 {
     height: 330px;
+    display: list-item;
   }
 }
 @media (min-width: 1024px) {
@@ -508,10 +519,12 @@ ul {
   background-position: center;
   background-size: cover;
   height: 228px;
+  display: none;
 }
 @media (min-width: 768px) {
   #why-nj #ig3 {
     height: 330px;
+    display: list-item;
   }
 }
 @media (min-width: 1024px) {
@@ -616,41 +629,38 @@ ul {
     grid-area: image1;
   }
 }
+#regions .region-img-ht {
+  height: 250px;
+}
 #regions #region1-image {
   background-image: url("../img/regions/region1.jpg");
   background-position: center;
   background-size: cover;
-  height: 250px;
 }
 #regions #region2-image {
   background-image: url("../img/regions/region2.jpg");
   background-position: center;
   background-size: cover;
-  height: 250px;
 }
 #regions #region3-image {
   background-image: url("../img/regions/region3.jpg");
   background-position: center;
   background-size: cover;
-  height: 250px;
 }
 #regions #region4-image {
   background-image: url("../img/regions/region4.jpg");
   background-position: center;
   background-size: cover;
-  height: 250px;
 }
 #regions #region5-image {
   background-image: url("../img/regions/region5.jpg");
   background-position: center;
   background-size: cover;
-  height: 250px;
 }
 #regions #region6-image {
   background-image: url("../img/regions/region6.jpg");
   background-position: center;
   background-size: cover;
-  height: 250px;
 }
 #regions #shore-p2 {
   display: none;
@@ -931,7 +941,17 @@ ul {
   background-image: url("../img/regions/beach.jpg");
   background-position: center;
   background-size: cover;
-  height: 500px;
+  height: 360px;
+}
+@media (min-width: 768px) {
+  #regions #beach-hero {
+    height: 640px;
+  }
+}
+@media (min-width: 1024px) {
+  #regions #beach-hero {
+    height: 730px;
+  }
 }
 
 #places-to-visit aside {
